force-app/main/default/objects/CAZ_DocumentoSolicitud__mdt/CAZ_DocumentoSolicitud__mdt.object-meta.xml
<CustomObject>
    <label>Documento Solicitud</label>
    <pluralLabel>Documentos Solicitud</pluralLabel>
</CustomObject>