force-app/main/default/objects/CAZ_DocumentoSolicitud__mdt/fields/CAZ_MontoMaximo__c.field-meta.xml
<CustomField>
    <fullName>CAZ_MontoMaximo__c</fullName>
    <description>Si se especifica, define el monto máximo (no inclusive) para que este documento sea requerido.</description>
    <label>Monto Máximo</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>