force-app/main/default/objects/CAZ_DocumentoSolicitud__mdt/fields/CAZ_MontoMinimo__c.field-meta.xml
<CustomField>
    <fullName>CAZ_MontoMinimo__c</fullName>
    <description>Si se especifica, define el monto mínimo (inclusive) para que este documento sea requerido.</description>
    <label>Monto Mínimo</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>