force-app/main/default/objects/CAZ_DocumentoSolicitud__mdt/fields/CAZ_Obligatorio__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Obligatorio__c</fullName>
    <label>Obligatorio</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>