force-app/main/default/objects/CAZ_DocumentoSolicitud__mdt/fields/CAZ_TipoArchivoPermitido__c.field-meta.xml
<CustomField>
    <fullName>CAZ_TipoArchivoPermitido__c</fullName>
    <label>Tipo de Archivo Permitido</label>
    <type>Text</type>
    <length>100</length>
</CustomField>