force-app/main/default/objects/CAZ_DocumentoSolicitud__mdt/fields/CAZ_TipoProceso__c.field-meta.xml
<CustomField>
    <fullName>CAZ_TipoProceso__c</fullName>
    <label>Tipo de Proceso</label>
    <length>80</length>
    <type>Text</type>
</CustomField>